# marmoset-ml

./: .ocamlformat  LICENSE  Makefile  README.md  dune-project  marmoset.opam
.github/workflows/: tests.yml
examples/: fibonacci.mr  indexing.mr  monkey.mr  sum.mr
lib/: ast.ml  builtins.ml  code.ml  compiler.ml  dune  env.ml  eval.ml  lexer.ml  marmoset.ml  parser.ml  symbol_table.ml  token.ml  value.ml  vm.ml
test/: dune
